# aurora

./: .gitignore  Cargo.toml  README.md
Excalidraw/: LinearlyTransformedCosines.excalidraw  PhysicsBasedShading.excalidraw
chest/: Cargo.toml
chest/src/: lib.rs  material.rs  node.rs  resource.rs  shader_defs.rs  texture.rs  util.rs
chest/src/import/: gltf.rs  mod.rs  obj.rs
chest/src/material/: mod.rs  pbr.rs
chest/src/node/: basic_triangle.rs  bilateral_filtering.rs  bloom.rs  depth_of_field.rs  depth_prepass.rs  depth_view.rs  env_mapping.rs  lens_flare.rs  mod.rs  motion_blur.rs  motion_vector_prepass.rs  normal_prepass.rs  pbr.rs  shadow_mapping.rs  skybox.rs  ssao.rs  tone_mapping.rs
chest/src/shader/: basic_triangle.wgsl  common_type.wgsl  common_types.wgsl  depth_pass.wgsl  depth_view.wgsl  hash.wgsl  math.wgsl  shadow_mapping.wgsl  tonemapping.wgsl
chest/src/shader/common/: common_binding.wgsl  common_type.wgsl
chest/src/shader/env_mapping/: convolve_env_map.wgsl  env_mapping.wgsl  env_mapping_binding.wgsl  env_mapping_type.wgsl  skybox.wgsl
chest/src/shader/pbr/: ltc.wgsl  pbr.wgsl  pbr_binding.wgsl  pbr_function.wgsl  pbr_type.wgsl
chest/src/shader/post_processing/: bloom.wgsl  depth_of_field.wgsl  lens_flare.wgsl  motion_blur.wgsl  ssao.wgsl  ssao_compute.wgsl  ssao_denoise.wgsl  tonemapping.wgsl
chest/src/shader/prepass/: depth_prepass.wgsl  motion_vector_prepass.wgsl  normal_prepass.wgsl
chest/src/shader/shadow/: shadow_mapping.wgsl  shadow_render.wgsl  shadow_type.wgsl
core/: Cargo.toml
core-dep/: Cargo.toml
core-dep/src/: color.rs  lib.rs  node.rs  pipeline.rs  render.rs  utils.rs
core-dep/src/resource/: buffer.rs  material.rs  mod.rs
core-dep/src/scene/: component.rs  entity.rs  mod.rs
core-dep/src/scene/render/: entity.rs  mod.rs
core/src/: buffer.rs  builtin_pipeline.rs  color.rs  lib.rs  node.rs  render.rs  util.rs  utils.rs
core/src/import/: gltf.rs
core/src/render/: flow.rs  helper.rs  mesh.rs  mod.rs  present.wgsl  resource.rs  scene.rs
core/src/render/shadow/: mod.rs
core/src/scene/: component.rs  entity.rs  mod.rs  resource.rs
core/src/scene/render/: entity.rs  mod.rs
core/src/shaders/: depth_pass.wgsl  fullscreen.wgsl
core/src/shaders/pbr/: pbr.wgsl
core/src/util/: cube.rs  ext.rs  mod.rs
gui/: Cargo.toml
gui/assets/: ao_test.blend  ao_test.blend1  ao_test.glb  bloom_test.glb  classic_blender.glb  depth_of_field_test.blend  depth_of_field_test.blend1  depth_of_field_test.glb  env_mapping.blend  env_mapping.blend1  env_mapping.glb  gltf_test.glb  randomized_plane.blend  randomized_plane.blend1  randomized_plane.glb  shader.wgsl  spheres_roughness.blend  spheres_roughness.blend1  spheres_roughness.glb  spheres_roughness_no_tex.glb  suzanne.glb
gui/src/: app.rs  main.rs  scene.rs
gui/src/render/: mod.rs
gui/src/resource/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs  material_object.rs  shader_data.rs  shader_def_enum.rs
