[package]
name = "aurora_chest"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora_core = { version = "0.1", path = "../core" }
aurora_derive = { version = "0.1", path = "../macros" }
bytemuck.workspace = true
ddsfile.workspace = true
encase.workspace = true
glam.workspace = true
naga_oil.workspace = true
palette.workspace = true
fast_poisson.workspace = true
uuid.workspace = true
wgpu.workspace = true
