[package]
name = "aurora_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora_chest = { version = "0.1", path = "../chest" }
aurora_core = { version = "0.1", path = "../core" }
env_logger = "0.11"
glam = "0.27"
log = "0.4"
palette = "0.7"
pollster = "0.3"
uuid = { version = "1.8", features = ["v4"] }
wgpu = { version = "0.20" }
winit = "0.30"
