[package]
name = "aurora_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora_chest = { version = "0.1", path = "../chest" }
aurora_core = { version = "0.1", path = "../core" }
env_logger.workspace = true
glam.workspace = true
log.workspace = true
naga_oil.workspace = true
palette.workspace = true
pollster.workspace = true
uuid.workspace = true
wgpu.workspace = true
winit.workspace = true
